--- a/client/src/app/globals.css
+++ b/client/src/app/globals.css
@@ -10,3 +10,41 @@
   -ms-overflow-style: none;
   scrollbar-width: none;
 }
+
+.input-range::-ms-track {
+  width: 300px;
+  height: 5px;
+  outline: none;
+  /*remove bg colour from the track, we'll use ms-fill-lower and ms-fill-upper instead */
+  background: transparent;
+  
+  /*leave room for the larger thumb to overflow with a transparent border */
+  border-color: transparent;
+  border-width: 6px 0;
+
+  /*remove default tick marks*/
+  color: transparent;
+}
+.input-range::-ms-fill-lower {
+  background: #777;
+  border-radius: 10px;
+}
+.input-range::-ms-fill-upper {
+  background: #ddd;
+  border-radius: 10px;
+}
+.input-range::-ms-thumb {
+  border: none;
+  height: 16px;
+  width: 16px;
+  border-radius: 50%;
+  background: goldenrod;
+  border: none;
+  outline: none;
+}
+.input-range:focus::-ms-fill-lower {
+  background: #888;
+}
+.input-range:focus::-ms-fill-upper {
+  background: #ccc;
+}
