--- a/client/src/app/globals.css
+++ b/client/src/app/globals.css
@@ -17,7 +17,7 @@
   outline: none;
   /*remove bg colour from the track, we'll use ms-fill-lower and ms-fill-upper instead */
   background: transparent;
-  
+
   /*leave room for the larger thumb to overflow with a transparent border */
   border-color: transparent;
   border-width: 6px 0;
@@ -25,14 +25,17 @@
   /*remove default tick marks*/
   color: transparent;
 }
+
 .input-range::-ms-fill-lower {
   background: #777;
   border-radius: 10px;
 }
+
 .input-range::-ms-fill-upper {
   background: #ddd;
   border-radius: 10px;
 }
+
 .input-range::-ms-thumb {
   border: none;
   height: 16px;
@@ -42,13 +45,34 @@
   border: none;
   outline: none;
 }
+
 .input-range:focus::-ms-fill-lower {
   background: #888;
 }
+
 .input-range:focus::-ms-fill-upper {
   background: #ccc;
 }
 
 .infinite-scroll-component__outerdiv {
   height: 100%;
+}
+
+.recording {
+  position: absolute;
+  left: 0;
+  width: 90% !important;
+}
+
+.audio-recorder {
+  background: inherit !important;
+  color: inherit !important;
+  box-shadow: none !important;
+}
+.recording .audio-recorder-mic {
+  display: none;
+}
+
+.audio-recorder-timer {
+  margin-left: 30px;
 }
