--- a/frontend/src/app/globals.css
+++ b/frontend/src/app/globals.css
@@ -28,6 +28,9 @@
 
   .dark {
     --background: #0b0d13;
+    --background-primary: #191b1f;
+    --background-secondary: #25262c;
+
     --foreground: #e9efff;
     --muted: #0c1b2e;
     --muted-foreground: #8a94a7;
@@ -41,7 +44,9 @@
     --card-foreground: #e9efff;
     --primary: #1c9dea;
     --primary-foreground: #ffffff;
+    --secondary: #192e3d;
 
+    --glass: #2e3038;
 
     /* --secondary-foreground: #fafdff; */
     --destructive: #a6101a;
