--- a/frontend/src/app/globals.css
+++ b/frontend/src/app/globals.css
@@ -30,7 +30,7 @@
 
   .dark {
     --background: #0b0d13;
-    --background-primary: #191b1f;
+    --background-primary: #1a1b1f;
     --background-secondary: #25262c;
 
     --foreground: #e9efff;
