--- a/frontend/src/app/globals.css
+++ b/frontend/src/app/globals.css
@@ -138,3 +138,12 @@
 .audio-recorder-timer {
   margin-left: 30px;
 }
+
+.audio-recorder-mic,
+.audio-recorder-options {
+  filter: invert();
+}
+
+.audio-recorder-timer {
+  color: white !important;
+}
